--- a/Project.toml
+++ b/Project.toml
@@ -1,8 +1,10 @@
 name = "SpinQuantum"
 uuid = "856139d4-bd2b-4127-8d9d-3972242b49a8"
 authors = ["Goran Nakerst <go.nakerst@web.de>"]
-version = "0.9.0"
+version = "0.10.0"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+QuantumBases = "6a474148-d581-4e0a-935c-0ecefba9a140"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
